--- a/package.json
+++ b/package.json
@@ -1,23 +1,23 @@
 {
-  "name": "bilbots",
-  "version": "0.0.0",
-  "private": true,
+  "name": "",
   "type": "module",
+  "version": "0.0.1",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "dev": "astro dev",
+    "build": "astro build",
+    "preview": "astro preview",
+    "astro": "astro"
   },
   "dependencies": {
-    "daisyui": "^4.12.14",
-    "vue": "^3.5.12"
-  },
-  "devDependencies": {
-    "@vitejs/plugin-vue": "^5.1.4",
-    "autoprefixer": "^10.4.20",
-    "postcss": "^8.4.49",
-    "tailwindcss": "^3.4.15",
-    "vite": "^5.4.10",
-    "vite-plugin-vue-devtools": "^7.5.4"
+    "@astrojs/vue": "^5.0.6",
+    "@tailwindcss/vite": "^4.0.8",
+    "astro": "^5.3.0",
+    "daisyui": "^5.0.0-beta.8",
+    "js-yaml": "^4.1.0",
+    "marked": "^15.0.7",
+    "remark": "^15.0.1",
+    "remark-html": "^16.0.1",
+    "tailwindcss": "^4.0.8",
+    "vue": "^3.5.13"
   }
 }
